--- a/src/modules/70-pipeline/pages/pipeline-details/PipelineDetails.module.scss
+++ b/src/modules/70-pipeline/pages/pipeline-details/PipelineDetails.module.scss
@@ -13,6 +13,10 @@
   }
 }
 
+.wrapper {
+  min-width: 1200px;
+}
+
 .pipelineStudioTitle {
   position: absolute;
   z-index: 1;
